<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="22dp"
    android:layout_marginEnd="22dp"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:id="@+id/listName"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="30"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/listpem"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/listName"
            android:text="@string/pemasukan"
            android:textColor="#38B000"
            android:textSize="14sp"
            android:textStyle="normal"
            android:fontFamily="@font/poppinsmedium"
            />

        <TextView
            android:id="@+id/listpeng"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/listpem"
            android:text="@string/pengeluaran"
            android:textColor="#FA6900"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsmedium"/>


        <TextView
            android:id="@+id/dateFilter"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/listName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-3dp"

            android:fontFamily="@font/poppinslight"
            android:text="@string/makanan"
            android:textColor="#5E5E5E"
            android:textSize="9sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>