<?xml version="1.0" encoding="utf-8"?>
<!--content_pemasukan.xml-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/input_area"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:boxStrokeColor="@color/color_pemasukan_tex"
        >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/tanggal"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/Total"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/Kategori"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/aset"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/Catatan"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tanggalTextView"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pemasukan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_input"
                    android:backgroundTint="@color/gray"
                    android:focusable="false"
                    android:inputType="none"
                    android:minHeight="40dp"
                    android:onClick="showDateTimePicker"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TotalText"
                tools:ignore="ExtraText">

                <AutoCompleteTextView
                    android:id="@+id/input_total"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:inputType="number"
                    android:minHeight="40dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/kategori">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_kategori"
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/padding_input"
                    android:layout_height="@dimen/input_height"
                    android:minHeight="40dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/asetText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_aset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_input"
                    android:focusable="false"
                    android:inputType="number"
                    android:minHeight="40dp"
                    android:onClick="showListAset"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/catatanText">

                <AutoCompleteTextView
                    android:id="@+id/input_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:paddingLeft="@dimen/padding_input"
                    android:text="123"
                    android:inputType="datetime"
                    android:minHeight="40dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/input_area">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FF00"
            android:text="@string/tambah_pemasukan"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>





</LinearLayout>