<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:boxStrokeColor="@color/color_pemasukan_tex"
        >
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tanggalPeng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/tanggal"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />
            <TextView
                android:id="@+id/totalPeng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/Total"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />

            <TextView
                android:id="@+id/kategoriPeng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                android:text="@string/Kategori"
                android:textColor="@color/color_pemasukan_tex" />
            <TextView
                android:id="@+id/asetPeng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/aset"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />
            <TextView
                android:id="@+id/notePeng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_pemasukan_tex"
                android:text="@string/Catatan"
                android:layout_marginTop="@dimen/margin_pemasukan"
                android:layout_marginBottom="@dimen/margin_pemasukan"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTanggal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTanggalPeng"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/padding_input"
                    android:backgroundTint="@color/gray"
                    android:text="asd"
                    android:focusable="false"
                    android:inputType="none"
                    android:minHeight="40dp"
                    android:onClick="showDateTimePickerPeng"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTotal">

                <AutoCompleteTextView
                    android:id="@+id/input_totalPeng"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:paddingLeft="@dimen/padding_input"
                    android:inputType="number"
                    android:minHeight="40dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textkategoriPeng">

                <AutoCompleteTextView
                    android:id="@+id/input_kategori_peng"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:paddingLeft="@dimen/padding_input"
                    android:inputType="none"
                    android:minHeight="40dp"
                    android:focusable="false"
                    android:clickable="true"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/asetText">

                <AutoCompleteTextView
                    android:id="@+id/input_aset_peng"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:paddingLeft="@dimen/padding_input"
                    android:focusable="false"
                    android:inputType="none"
                    android:minHeight="40dp"
                    android:clickable="true"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/catatanText">

                <AutoCompleteTextView
                    android:id="@+id/input_catatan_peng"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:paddingLeft="@dimen/padding_input"
                    android:text=""
                    android:inputType="text"
                    android:minHeight="40dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>